# conductor

./: .gitignore  README.md  pyproject.toml
conductor/: __init__.py  board_initializer.py  cli.py
conductor/agents/: __init__.py  generic.py
conductor/context/: __init__.py  assembler.py  hitl_fields.py  prompt_context.py
conductor/executor/: __init__.py  base.py  hybrid_executor.py  llm_executor.py  loader.py  registry.py  reviewer_executor.py  tool_executor.py
conductor/git/: __init__.py  manager.py  worktree_manager.py
conductor/models/: __init__.py  config.py  enums.py  metrics.py  phases.py  review.py  state.py  ticket.py
conductor/observability/: log_config.py  logger.py  metrics_store.py
conductor/pipeline/: __init__.py  builder.py  loader.py  validator.py
conductor/providers/: base.py  bedrock.py  factory.py  pool.py
conductor/tools/: base.py  file_ops.py  shell.py
conductor/tracker/: __init__.py  backend.py  (+1 more)
docs/: architecture.md  configuration.md  getting-started.md  llm-usage.md  pipeline-reference.md  writing-agents.md
proposal/: conductor-generic-refactor.md  conductor-hitl-fields.md  conductor-sequential-wp-within-pod.md  conductor-workpackage-type-filtering.md  conductor-worktree-manager-state-lost-on-restart.md  conductor-worktree-support.md  conductor_agent_improvements.md  conductor_llm_improvements.md  event_driven_tracker_specification.md
tests/: conftest.py  test_async_watcher.py  test_integration.py  test_phase_dependencies.py  test_pipeline_validation.py  test_provider_pool.py  test_worktree_restore.py  test_worktrees.py
(+76 files in other folders)
