[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conductor"
version = "0.1.0"
description = "Event-driven tracker orchestration framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "click>=8.0,<9.0",
    "fastapi>=0.110.0,<1.0",
    "uvicorn>=0.29.0,<1.0",
    "jinja2>=3.1.0,<4.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
bedrock = [
    "boto3>=1.34.0,<2.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
conductor = "conductor.cli:main"

[tool.setuptools.packages.find]
include = ["conductor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
